--- a/esercizi/Esercizio 3/style2.css
+++ b/esercizi/Esercizio 3/style2.css
@@ -35,3 +35,29 @@ body
 {
     width: 100%;
 }
+
+@media screen and (max-width: 800px)
+{
+    .w50
+    {
+        width: 100%;
+    }
+
+    .w50 .w50
+    {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 400px)
+{
+    .w33, .w66, .w50, .w50 .w50
+    {
+        width: 100%;
+    }
+
+    body > .flex:nth-child(2)
+    {
+        flex-direction: column-reverse;
+    }
+}
